force-app/main/default/objects/ISBAM_Survey__c/ISBAM_Survey__c.object-meta.xml
<CustomObject>
    <label>ISBAM Survey</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISBAM Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>