force-app/main/default/objects/ISBAM_Survey__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>ISBAM Surveys</relationshipLabel>
    <relationshipName>ISBAM_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>