force-app/main/default/objects/ISBAM_Survey__c/fields/Survey_Claims_Handling__c.field-meta.xml
<CustomField>
    <fullName>Survey_Claims_Handling__c</fullName>
    <label>Survey Claims Handling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>