force-app/main/default/objects/ISBAM_Survey__c/fields/Survey_Experience_with_Representative__c.field-meta.xml
<CustomField>
    <fullName>Survey_Experience_with_Representative__c</fullName>
    <label>Survey Experience with Representative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>