force-app/main/default/objects/ISBAM_Survey__c/fields/Survey_Free_form__c.field-meta.xml
<CustomField>
    <fullName>Survey_Free_form__c</fullName>
    <label>Survey Free form</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>