force-app/main/default/objects/ISBAM_Survey__c/fields/Survey_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Submit_Date__c</fullName>
    <label>Survey Submit Date</label>
    <type>Date</type>
</CustomField>